--- a/.github/workflows/refenv-dockerize.yml
+++ b/.github/workflows/refenv-dockerize.yml
@@ -76,6 +76,7 @@ jobs:
         pkg-config \
         python3 \
         python3-dev \
+        python3-setuptools \
         rsync \
         texinfo \
         vde2 \
