adjusting to the new qemu build-system
Signed-off-by: Simon A. F. Lund <simon.lund@samsung.com>

--- a/.github/workflows/refenv-dockerize.yml
+++ b/.github/workflows/refenv-dockerize.yml
@@ -73,6 +73,8 @@ jobs:
         libselinux1-dev \
         libtool \
         libvirt-bin \
+        meson \
+        ninja-build \
         pkg-config \
         python3 \
         python3-dev \
