--- a/.github/workflows/refenv-dockerize.yml
+++ b/.github/workflows/refenv-dockerize.yml
@@ -35,13 +35,15 @@ jobs:
         apt-get -qy \
           -o "Dpkg::Options::=--force-confdef" \
           -o "Dpkg::Options::=--force-confold" upgrade
-        apt-get -qy install aptitude
+        apt-get -qy install \
+          apt-utils \
+          aptitude \
+          pkg-config
         apt-get -qy autoclean
 
     - name: Prep, install build-requirements
       run: |
         aptitude -q -y -f install \
-        apt-utils \
         autoconf \
         automake \
         bc \
@@ -53,6 +55,19 @@ jobs:
         flex \
         gawk \
         git \
+        rsync
+
+    - name: Prep, install build-requirements
+      run: |
+        aptitude -q -y -f install \
+        python3 \
+        python3-dev \
+        python3-distutils \
+        python3-setuptools
+
+    - name: Prep, install build-requirements
+      run: |
+        aptitude -q -y -f install \
         libaio-dev \
         libaudit-dev \
         libblkid-dev \
@@ -75,11 +90,6 @@ jobs:
         libvirt-bin \
         meson \
         ninja-build \
-        pkg-config \
-        python3 \
-        python3-dev \
-        python3-setuptools \
-        rsync \
         texinfo \
         vde2 \
         zlib1g-dev
