adjusting to the new qemu build-system
Signed-off-by: Simon A. F. Lund <simon.lund@samsung.com>

--- a/.github/workflows/refenv-dockerize.yml
+++ b/.github/workflows/refenv-dockerize.yml
@@ -112,7 +112,7 @@ jobs:
         git -C qemu rev-parse --short HEAD > build/docker_tag.txt
         cd build
         ../qemu/configure \
-            --prefix=/ \
+            --prefix=/usr \
             --python=/usr/bin/python3 \
             --audio-drv-list="" \
             --disable-docs \
