--- a/.github/workflows/refenv-dockerize.yml
+++ b/.github/workflows/refenv-dockerize.yml
@@ -5,7 +5,7 @@
 #  - Containing latest CIJOE
 #  - envs, guests and scripts for CIJOE
 #
-# Uses the qemu from https://irrelevant.dk/g/pci-nvme.git/ tag: 'edge'
+# Uses the qemu from https://github.com/qemu/qemu.git tag: 'v6.0.0'
 # Uses the latest CIJOE available from PyPI
 #
 name: refenv.dockerize
@@ -14,8 +14,9 @@ on:
   push:
     branches: [ refenv.dockerize ]
 
-  schedule:
-  - cron:  '15 4,21 * * *'
+# Disable schedule since it is currently not used
+#  schedule:
+#  - cron:  '15 4,21 * * *'
 
 defaults:
   run:
@@ -29,7 +30,7 @@ jobs:
     container: debian:bullseye
 
     steps:
-    - name: Prep, ...
+    - name: Prep, 1..4
       run: |
         apt-get -qy update
         apt-get -qy \
@@ -41,7 +42,7 @@ jobs:
           pkg-config
         apt-get -qy autoclean
 
-    - name: Prep, ....
+    - name: Prep, 2..4
       run: |
         aptitude -q -y -f install \
         autoconf \
@@ -57,44 +58,29 @@ jobs:
         git \
         rsync
 
-    - name: Prep, .....
+    - name: Prep, 3..4
       run: |
         aptitude -q -y -f install \
-        python3 \
-        python3-dev \
-        python3-distutils \
-        python3-setuptools
-
-    - name: Prep, ......
-      run: |
-        aptitude -q -y -f install \
+        curl \
+        file \
         libaio-dev \
-        libaudit-dev \
-        libblkid-dev \
-        libcap-dev \
-        libcap-ng-dev \
-        libdw-dev \
-        libelf-dev \
-        libffi-dev \
         libglib2.0-0 \
         libglib2.0-dev \
         libguestfs-tools \
-        libltdl-dev \
         liblzo2-dev \
-        libmount-dev \
-        libpixman-1-0 \
-        libpixman-1-dev \
         libpmem-dev \
-        libselinux1-dev \
-        libtool \
-        libvirt-bin \
+        libvirt-dev \
+        libvirt0 \
         meson \
         ninja-build \
+        python3 \
+        python3-dev \
+        python3-distutils \
+        python3-setuptools \
         texinfo \
-        vde2 \
-        zlib1g-dev
+        uuid-dev
 
-    - name: Prep, .......
+    - name: Prep, 4..4
       run: |
         aptitude -q -y -f install \
         libpixman-1-0 \
@@ -102,14 +88,15 @@ jobs:
 
     - name: Grab qemu source
       run: |
-        git clone --recursive https://irrelevant.dk/g/pci-nvme.git qemu
+        git clone --recursive https://github.com/qemu/qemu.git
         cd qemu
-        git checkout edge-pre_meson
+        git checkout v6.0.0
 
     - name: Configure qemu
       run: |
         mkdir build
-        git -C qemu rev-parse --short HEAD > build/docker_tag.txt
+        mkdir /opt/qemu
+        echo "v6.0.0" > /opt/qemu/docker_tag.txt
         cd build
         ../qemu/configure \
             --prefix=/opt/qemu \
@@ -138,13 +125,13 @@ jobs:
       run: |
         cd build
         make -j $(nproc)
-        chmod +x x86_64-softmmu/qemu-system-x86_64
+        make install
 
     - name: Upload Binaries
       uses: actions/upload-artifact@v2
       with:
         name: qemu-binaries
-        path: build
+        path: /opt/qemu
 
   build-docker:
     needs: build-qemu
