docker: adjust to changes in CIJOE
Signed-off-by: Simon A. F. Lund <os@safl.dk>

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -51,8 +51,8 @@ RUN aptitude -q -y -f install \
 
 RUN ln -s /usr/bin/python3.8 /usr/bin/python
 
-RUN pip install cijoe || true
-RUN pip3 install cijoe || true
+RUN pip install cijoe cijoe-pkg-example || true
+RUN pip3 install cijoe cijoe-pkg-example || true
 
 # Setup SSH
 RUN echo "PermitRootLogin yes" >> /etc/ssh/sshd_config
