--- a/qemu-nvme/Dockerfile
+++ b/qemu-nvme/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /opt
 
 COPY qemu qemu
 
+ENV PATH="/opt/qemu/bin:$PATH"
+
 RUN chmod +x qemu/bin/qemu-system-x86_64
 
 RUN apt-get -qy update && \
@@ -64,5 +66,8 @@ RUN echo "  StrictHostKeyChecking no" >> /root/.ssh/config
 RUN echo "  NoHostAuthenticationForLocalhost yes" >> /root/.ssh/config
 RUN echo "  UserKnownHostsFile=/dev/null" >> /root/.ssh/config
 RUN chmod 0400 /root/.ssh/config
+
+# Check that the correct qemu is being called
+RUN qemu-system-x86_64 --version
 
 CMD ["bash"]
