--- a/xnvme-devtools/Dockerfile
+++ b/xnvme-devtools/Dockerfile
@@ -38,7 +38,8 @@ RUN pip3 install pre-commit
 RUN pip3 install breathe Jinja2 kmdo sphinx sphinx_rtd_theme sphinxcontrib-bibtex
 
 RUN apt-get -qy install \
-	doxygen
+	doxygen \
+	graphviz
 
 RUN wget -O - https://apt.llvm.org/llvm-snapshot.gpg.key | apt-key add -
 
