Add dependencies for isa-l
Signed-off-by: Karl Bonde Torp <k.torp@samsung.com>

--- a/xnvme-devtools-ci/Dockerfile
+++ b/xnvme-devtools-ci/Dockerfile
@@ -17,6 +17,7 @@ RUN apt-get -qy install \
 	wget
 
 RUN apt-get -qy install \
+	autoconf \
 	build-essential \
 	git \
 	libaio-dev \
@@ -24,6 +25,7 @@ RUN apt-get -qy install \
 	libncurses5-dev \
 	libnuma-dev \
 	libssl-dev \
+	libtool \
 	nasm \
 	pkg-config \
 	python3 \
